# diff-numerics

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  cmake_uninstall.cmake  diff-numerics.1  diff_numerics.1
.github/workflows/: ci.yml
headers/libs/: NumericDiff.h
include/diff-numerics/: NumericDiff.h  NumericDiffOption.h
include/diff_numerics/: NumericDiff.h
src/: NumericDiff.cpp  NumericDiffOption.cpp  main.cpp
src/libs/: NumericDiff.cpp
test/: CMakeLists.txt  README.md  test-diff-numerics.cpp  test_diff_numerics.cpp
